# eko-claw-openclaw

./: .env.example  .gitignore  CLAW.md  README.md
client/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.jsx  index.css
client/src/api/: client.js
client/src/components/agent/: AgentResponse.jsx  QueryInput.jsx
client/src/components/anomalies/: AnomalyTable.jsx  SeverityBadge.jsx
client/src/components/dashboard/: AnomalyChart.jsx  StatsCard.jsx
client/src/components/layout/: Navbar.jsx  (+1 more)
client/src/pages/: AgentConsole.jsx  Anomalies.jsx  Dashboard.jsx  Tickets.jsx
data/knowledge_base/: escalation_matrix.md
mcp-server/src/tools/: escalateIssue.ts
openclaw-workspace/: openclaw-workspace-state.json
rag-service/: pyproject.toml
rag-service/chroma_store/: chroma.sqlite3
server/: .env.example  .gitignore  README.md  ingest.py  link_db.py  main.py  openclaw.config.json  openclaw.config.json.bak  render.yaml  requirements.txt
server/app/: main.py
server/app/agents/: AGENTS.md  agent.py
server/app/db/: database.py
server/app/mcp/: package.json
server/app/models/: schemas.py
server/app/rag/: rag_service.py
server/app/routes/: agent.py  anomalies.py  dashboard.py  rag.py  tickets.py
server/data/knowledge_base/: kyc_sops.md  partner_policies.md  payment_faqs.md
server/mcp-server/: package-lock.json  test_tools.js
server/mcp-server/src/: index.ts
server/openclaw-workspace/: SOUL.md  TOOLS.md  openclaw.config.json
server/plugin-skills/: browser-automation  canvas
(+10 files in other folders)
